スマホで見た時に変に改行される為、<br>を削除

--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -1,5 +1,5 @@
 appname: "Tabiji - 旅の記録アプリ"
-catchcopy: 旅の思い出を<br/>もっと楽に、もっと楽しく。<br/>旅を通じて人生を豊かに。
+catchcopy: 旅の思い出をもっと楽に、もっと楽しく。旅を通じて人生を豊かに。
 vision: ビジョン
 concept: Tabijiはより旅を楽しんでもらう、旅に集中してもらうことを目指している旅の記録アプリです。
   自分の旅をより大切にしてもらいたいから、あえてSNSライクなアプリにはしません。
