--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,19 @@
 # Site settings
-title:
+title: Tabiji - ENRICH YOUR LIFE THROUGH YOUR TRAVELING
 email:
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: ''
+# baseurl: "https://daichancorgi.github.io/tabiji-lp" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-languages: ["ja", "en"]
-#languages: ["en", "ja"]
+# languages: ["ja", "en"]
+languages: ["en", "ja"]
 
 # Github上の公開用のディレクトリを指定
 destination:     ./docs
 
-exclude_from_localizations: ["javascript", "images", "css"]
+# i18n
+exclude_from_localizations: ["js", "img", "css"]
 
 twitter_username:
 github_username:
