rakeタスク追加 i18n時の除外ファイル・ディレクトリ追加 productionのイメージを絶対パスへ変更

--- a/docs/Rakefile
+++ b/docs/Rakefile
@@ -1,4 +1,8 @@
 require 'yamllint/rake_task'
+require 'rake/clean'
+
+CLEAN.include("./docs/*")
+CLOBBER.include("./docs/*")
 
 YamlLint::RakeTask.new do |t|
     t.paths = %w(
@@ -6,6 +10,18 @@ YamlLint::RakeTask.new do |t|
     )
 end
 
-task :build do
-  shell("jekyll build --destination ./docs")
+desc "build HTML from jekyll files."
+task :build_production => :clean do
+  sh "env JEKYLL_ENV=production jekyll build"
+end
+
+desc "push files to origin/master."
+task :push do
+  sh "git push origin master"
+end
+
+desc "fetch and merge files from upstream."
+task :pull_from_upstream do
+  sh "git fetch upstream"
+  sh "git merge upstream/master"
 end
