--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,22 @@
 # Site settings
-title: Tabiji - ENRICH YOUR LIFE THROUGH YOUR TRAVELING
+title: Tabiji
 email:
-description: > # this means to ignore newlines until "baseurl:"
-baseurl: ''
+description: ENRICH YOUR LIFE THROUGH YOUR TRAVEL
+baseurl: ""
 # baseurl: "https://daichancorgi.github.io/tabiji-lp" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
-# languages: ["ja", "en"]
+# default language is english.
 languages: ["en", "ja"]
 
 # Github上の公開用のディレクトリを指定
-destination:     ./docs
+destination:  docs
 
-# i18n
-exclude_from_localizations: ["js", "img", "css"]
+# i18nの対象外ディレクトリ
+exclude_from_localizations: [
+  "js", "css", "font-awesome", "fonts",
+  "Rakefile", "README.md", "Gemfile", "docs"
+]
 
 twitter_username:
 github_username:
