--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Tabiji
 email:
 description: ENRICH YOUR LIFE THROUGH YOUR TRAVEL
 # baseurl: ""
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/tabiji-lp" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
 # default language is english.
